# Parallel_Tabu_Search

./: .gitattributes  .gitignore  README.md  docker-compose.yaml  dockerfile
demo/: asynchronous-mpi.cpp  asynchronous-mpi_openmp.cpp
master-slave/flowchart/: flowchart.docx  note.txt
master-slave/source-code/concept/: asynchronous-mpi_openmp.cpp
master-slave/source-code/version-1/: CMakeLists.txt
master-slave/source-code/version-1/src/: cli.hpp  clusterize.cpp  common.cpp  common.hpp  config.cpp  config.hpp  input.cpp  input.hpp  main.cpp  master.cpp  master.hpp  solutions.cpp  solutions.hpp  tabu_search.cpp  tabu_search.hpp  worker.cpp  worker.hpp
master-slave/source-code/version-2/: script.sh
master-slave/source-code/version-2/src/: cli.hpp  config.cpp  config.hpp  main.cpp  parallel.cpp
sequence-tabu-search/cpp/src/: routes.hpp  solutions.hpp
